main/default/objects/Attendee__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company to which attendee belongs</description>
    <inlineHelpText>Enter attendee&apos;s company name</inlineHelpText>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>