main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>email of attendee</description>
    <inlineHelpText>Enter attendee&apos;s email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>