main/default/objects/Attendee__c/fields/Location_Address_Book__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location of the attendee</description>
    <inlineHelpText>Attendee&apos;s current address</inlineHelpText>
    <label>Location_Address_Book</label>
    <referenceTo>Location_Address_Book__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>