main/default/objects/Attendee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Attendee&apos;s phone number</description>
    <inlineHelpText>Enter attendee&apos;s phone number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>